[project]
name = "comfyui-node-beautify"
description = "Add a button that formats the workflow graph"
version = "1.1.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-node-beautify"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Node Beautify"
Icon = ""
